# Front-site

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_bot.py  run_web.py
.github/workflows/: ci.yml
.pytest_cache/: .gitignore
.pytest_cache/v/cache/: lastfailed  nodeids
bot_app/: __init__.py  config.py  db.py  discord_client.py  logging_utils.py  main_bot.py  main_web.py  osu_client.py  osu_oauth.py  rate_limiter.py  verification.py  web_app.py
config/: role_mapping.example.json
data/: bot_data.db
osu_discord_role_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_discord_helpers.py  test_osu_client.py  test_verification.py  test_web_flow.py
